--- a/_includes/menu-left.html
+++ b/_includes/menu-left.html
@@ -1,5 +1,5 @@
 <div class="mdl-layout__drawer">
-    <span class="mdl-layout-title">360 Tour</span>
+    <span class="mdl-layout-title">Google Trip</span>
     <nav class="mdl-navigation">
         <a class="mdl-navigation__link" href="{{ site.baseurl }}/">Home</a>
         <a class="mdl-navigation__link" href="{{ site.gdgfresno }}">GDG Fresno</a>
