Computer History Museum link fix

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,7 @@
                 <a href="{{ site.google }}">Google</a>
             </li>
             <li>
-                <a href="{{ site.google }}">Computer History Museum</a>
+                <a href="{{ site.chm }}">Computer History Museum</a>
             </li>
             <li>
                 <a href="{{ site.geekwise }}">Geekwise Academy</a>
