--- a/_includes/menu-left.html
+++ b/_includes/menu-left.html
@@ -11,7 +11,7 @@
         <a class="mdl-navigation__link" href="{{ site.eocfresno }}">Fresno Economic Opportunities Commission</a>
         <a class="mdl-navigation__link" href="{{ site.bitwise }}">Bitwise Industries</a>
         <a class="mdl-navigation__link" href="{{ site.google }}">Google</a>
-        <a class="mdl-navigation__link" href="{{ site.google }}">Computer History Museum</a>
+        <a class="mdl-navigation__link" href="{{ site.chm }}">Computer History Museum</a>
         <a class="mdl-navigation__link" href="{{ site.geekwise }}">Geekwise Academy</a>
         <a class="mdl-navigation__link" href="{{ site.rootaccess }}">Root Access Hackerspace</a>
 
